--- a/public/css/style.css
+++ b/public/css/style.css
@@ -8,6 +8,7 @@ html {
   height: 100svh;
   width: 100svw;
   scroll-behavior: smooth;
+  -webkit-scrollbar: 0px;
 }
 
 header {
@@ -28,6 +29,7 @@ header .header__logo {
 
 body {
   position: relative;
+  overflow-x: hidden;
 }
 body .main-container {
   width: 100%;
